FastCollinear - slight optimizations (iterator / checkedLines)